# hoplite2

./: LICENSE  README.md  pyproject.toml
examples/: output.csv  test.py
hoplite2/: LayerSparsity.py  __init__.py  hoplite.py  layer_sparsity.py  spartan.py
