[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "hoplite2"
author = "Pranoy Dutta"
author-email = "pranoydll@gmail.com"
home-page = "https://github.com/prydt/hoplite2"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "tensorflow >= 2.2.0"
]
